--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Retell SDK -->
-    <script src="https://cdn.retellai.com/sdk/beta/retell-client-sdk.umd.js"></script>
+    <!-- Retell SDK - UPDATED URL -->
+    <script src="https://unpkg.com/retell-sdk/dist/retell-client-sdk.umd.js"></script>
     <style>
         body { font-family: 'Inter', sans-serif; }
     </style>
