--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             // --- CONFIGURATION ---
             // PASTE YOUR N8N WEBHOOK URL INSIDE THE BACKTICKS
-            const N8N_REGISTER_CALL_URL = 'https://tanyajain02.app.n8n.cloud/webhook/eb179fa8-b0cc-41b7-98d7-74f95887fd9c'; 
+            const N8N_REGISTER_CALL_URL = `https://tanyajain02.app.n8n.cloud/webhook/eb179fa8-b0cc-41b7-98d7-74f95887fd9c`; 
             // -------------------
 
             const startButton = document.getElementById('start-call-button');
@@ -121,4 +121,5 @@
     </script>
 </body>
 </html>
+
 
