--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         // DO NOT use your SECRET key directly in client-side code!
         // For a production app, you'd use a backend to generate a temporary token.
         // For a simple demo, a publishable API key is often sufficient if you understand the risks.
-        const R_RETELL_API_KEY = "YOUR_RETELL_PUBLISHABLE_API_KEY"; // Get this from Retell Dashboard -> API Keys -> Create new -> "Publishable Key"
+        const R_RETELL_API_KEY = "key_df672687299008be987b849a343f"; // Get this from Retell Dashboard -> API Keys -> Create new -> "Publishable Key"
 
         // REPLACE THIS WITH YOUR RETELL AGENT ID
-        const AGENT_ID = "YOUR_AGENT_ID"; // Get this from your Retell agent's settings
+        const AGENT_ID = "agent_93a625978f44a1acf5d790c456"; // Get this from your Retell agent's settings
 
         let conversation;
         const statusElement = document.getElementById('status');
@@ -100,3 +100,4 @@
     </script>
 </body>
 </html>
+
