--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <!-- Retell SDK Script -->
-    <script src="https://unpkg.com/@retell-ai/retell-sdk/dist/retell-sdk.js"></script>
+    <script src="https://unpkg.com/retell-client-js/dist/index.js"></script>
     <script>
         // REPLACE THIS WITH YOUR ACTUAL RETELL API KEY
         // DO NOT use your SECRET key directly in client-side code!
@@ -100,5 +100,6 @@
     </script>
 </body>
 </html>
+
 
 
